--- a/social.css
+++ b/social.css
@@ -1,8 +1,11 @@
-html,body{
+html{
+    width:850px;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: lightblue;
 }
 #head{
-    background-color: rgb(32, 86, 187);
+    background-image:url("schrutefarms.jpg");
+    background-size:cover;
     height: 300px;
     width: 850px;
 }
@@ -13,7 +16,8 @@ html,body{
     position: absolute;
     top: 180px;
     left:20px;
-    background-color: rgb(32, 86, 187);
+    background-image: url("Dwight_Schrute.jpg");
+    background-size: cover;
 }
 .Name{
     color: white;
@@ -45,4 +49,42 @@ li{
     width: 848px;
     text-align-last: center;
     text-decoration-color: rgb(32, 86, 187)
+}
+#header{
+    
+    margin-bottom: 20px;
+}
+#column1{
+    width: 318px;
+    border-bottom: solid slategray .5px;
+    border-top: solid slategray .5px;
+    padding: 5px;
+    position: relative;
+    Border-right: solid  slategray 5px;
+    float:left;
+    border-left:solid slategray 1px;
+}
+#column2{
+    width: 485px;
+    float: right;
+    padding: 5px;
+    border-right: solid slategray 1px;
+    height:300px;
+    border-top: solid black 1px;
+
+}
+#sprofile
+{ 
+    width:50px;
+    height:50px;
+    border: solid black 1px;
+    background-image: url("Dwight_Schrute.jpg");
+    background-size: cover;
+    float: left;
+
+}
+#user
+{
+    height: 125px;
+    border-bottom: solid black 1px;
 }
