--- a/social.css
+++ b/social.css
@@ -1,7 +1,11 @@
-html{
-    width:850px;
+body, main{
+    width: 850px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: lightblue;
+    background-color: rgb(0, 81, 255);
+    margin:  0 auto;
+    padding-bottom:50px;
+    align-content: center;
+    
 }
 #head{
     background-image:url("schrutefarms.jpg");
@@ -13,9 +17,9 @@ html{
     height: 150px;
     width: 150px;
     border: solid black 1px;
-    position: absolute;
-    top: 180px;
-    left:20px;
+    margin-left: 25px;
+    position: relative;
+    
     background-image: url("Dwight_Schrute.jpg");
     background-size: cover;
 }
@@ -28,9 +32,9 @@ html{
 }
 .website{
     color:white;
-    position: absolute;
-    left: 190px;
-    top: 260px;
+    position: relative;
+    left: 10px;
+    top: 290px;
 }
 li{
     background-color: white;
@@ -42,7 +46,7 @@ li{
     display: inline-block;
     position: relative;
     left: 550px;
-    top: 200px;
+    top: 220px;
 }
 #bar{
     border:  solid grey 1px;
@@ -54,26 +58,18 @@ li{
     
     margin-bottom: 20px;
 }
-#column1{
+.column{
     width: 318px;
-    border-bottom: solid slategray .5px;
-    border-top: solid slategray .5px;
+    border:1px solid white;
     padding: 5px;
     position: relative;
-    Border-right: solid  slategray 5px;
+    align-content: center;
     float:left;
-    border-left:solid slategray 1px;
+   
 }
-#column2{
-    width: 485px;
-    float: right;
-    padding: 5px;
-    border-right: solid slategray 1px;
-    height:300px;
-    border-top: solid black 1px;
 
-}
-#sprofile
+
+.sprofile
 { 
     width:50px;
     height:50px;
@@ -87,4 +83,13 @@ li{
 {
     height: 125px;
     border-bottom: solid black 1px;
+}
+.add{
+    border-bottom: 1px solid white
+}
+.post{
+    border-top:1px solid white;
+}
+#wrapper{
+    align-items: center;
 }
